// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parses \`\`\` code fences 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "key": "147",
    "nodes": Array [
      Object {
        "characters": Array [
          Object {
            "marks": Array [],
            "text": "c",
          },
          Object {
            "marks": Array [],
            "text": "o",
          },
          Object {
            "marks": Array [],
            "text": "n",
          },
          Object {
            "marks": Array [],
            "text": "s",
          },
          Object {
            "marks": Array [],
            "text": "t",
          },
          Object {
            "marks": Array [],
            "text": " ",
          },
          Object {
            "marks": Array [],
            "text": "h",
          },
          Object {
            "marks": Array [],
            "text": "e",
          },
          Object {
            "marks": Array [],
            "text": "l",
          },
          Object {
            "marks": Array [],
            "text": "l",
          },
          Object {
            "marks": Array [],
            "text": "o",
          },
          Object {
            "marks": Array [],
            "text": " ",
          },
          Object {
            "marks": Array [],
            "text": "=",
          },
          Object {
            "marks": Array [],
            "text": " ",
          },
          Object {
            "marks": Array [],
            "text": "'",
          },
          Object {
            "marks": Array [],
            "text": "w",
          },
          Object {
            "marks": Array [],
            "text": "o",
          },
          Object {
            "marks": Array [],
            "text": "r",
          },
          Object {
            "marks": Array [],
            "text": "l",
          },
          Object {
            "marks": Array [],
            "text": "d",
          },
          Object {
            "marks": Array [],
            "text": "'",
          },
          Object {
            "marks": Array [],
            "text": ";",
          },
          Object {
            "marks": Array [],
            "text": "
",
          },
          Object {
            "marks": Array [],
            "text": "f",
          },
          Object {
            "marks": Array [],
            "text": "u",
          },
          Object {
            "marks": Array [],
            "text": "n",
          },
          Object {
            "marks": Array [],
            "text": "c",
          },
          Object {
            "marks": Array [],
            "text": "t",
          },
          Object {
            "marks": Array [],
            "text": "i",
          },
          Object {
            "marks": Array [],
            "text": "o",
          },
          Object {
            "marks": Array [],
            "text": "n",
          },
          Object {
            "marks": Array [],
            "text": "(",
          },
          Object {
            "marks": Array [],
            "text": ")",
          },
          Object {
            "marks": Array [],
            "text": " ",
          },
          Object {
            "marks": Array [],
            "text": "{",
          },
          Object {
            "marks": Array [],
            "text": "
",
          },
          Object {
            "marks": Array [],
            "text": " ",
          },
          Object {
            "marks": Array [],
            "text": " ",
          },
          Object {
            "marks": Array [],
            "text": "r",
          },
          Object {
            "marks": Array [],
            "text": "e",
          },
          Object {
            "marks": Array [],
            "text": "t",
          },
          Object {
            "marks": Array [],
            "text": "u",
          },
          Object {
            "marks": Array [],
            "text": "r",
          },
          Object {
            "marks": Array [],
            "text": "n",
          },
          Object {
            "marks": Array [],
            "text": " ",
          },
          Object {
            "marks": Array [],
            "text": "h",
          },
          Object {
            "marks": Array [],
            "text": "e",
          },
          Object {
            "marks": Array [],
            "text": "l",
          },
          Object {
            "marks": Array [],
            "text": "l",
          },
          Object {
            "marks": Array [],
            "text": "o",
          },
          Object {
            "marks": Array [],
            "text": ";",
          },
          Object {
            "marks": Array [],
            "text": "
",
          },
          Object {
            "marks": Array [],
            "text": "}",
          },
        ],
        "key": "146",
      },
    ],
    "type": "code",
  },
]
`;

exports[`parses ~~~ code fences 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "key": "150",
    "nodes": Array [
      Object {
        "characters": Array [
          Object {
            "marks": Array [],
            "text": "c",
          },
          Object {
            "marks": Array [],
            "text": "o",
          },
          Object {
            "marks": Array [],
            "text": "n",
          },
          Object {
            "marks": Array [],
            "text": "s",
          },
          Object {
            "marks": Array [],
            "text": "t",
          },
          Object {
            "marks": Array [],
            "text": " ",
          },
          Object {
            "marks": Array [],
            "text": "h",
          },
          Object {
            "marks": Array [],
            "text": "e",
          },
          Object {
            "marks": Array [],
            "text": "l",
          },
          Object {
            "marks": Array [],
            "text": "l",
          },
          Object {
            "marks": Array [],
            "text": "o",
          },
          Object {
            "marks": Array [],
            "text": " ",
          },
          Object {
            "marks": Array [],
            "text": "=",
          },
          Object {
            "marks": Array [],
            "text": " ",
          },
          Object {
            "marks": Array [],
            "text": "'",
          },
          Object {
            "marks": Array [],
            "text": "w",
          },
          Object {
            "marks": Array [],
            "text": "o",
          },
          Object {
            "marks": Array [],
            "text": "r",
          },
          Object {
            "marks": Array [],
            "text": "l",
          },
          Object {
            "marks": Array [],
            "text": "d",
          },
          Object {
            "marks": Array [],
            "text": "'",
          },
          Object {
            "marks": Array [],
            "text": ";",
          },
          Object {
            "marks": Array [],
            "text": "
",
          },
          Object {
            "marks": Array [],
            "text": "f",
          },
          Object {
            "marks": Array [],
            "text": "u",
          },
          Object {
            "marks": Array [],
            "text": "n",
          },
          Object {
            "marks": Array [],
            "text": "c",
          },
          Object {
            "marks": Array [],
            "text": "t",
          },
          Object {
            "marks": Array [],
            "text": "i",
          },
          Object {
            "marks": Array [],
            "text": "o",
          },
          Object {
            "marks": Array [],
            "text": "n",
          },
          Object {
            "marks": Array [],
            "text": "(",
          },
          Object {
            "marks": Array [],
            "text": ")",
          },
          Object {
            "marks": Array [],
            "text": " ",
          },
          Object {
            "marks": Array [],
            "text": "{",
          },
          Object {
            "marks": Array [],
            "text": "
",
          },
          Object {
            "marks": Array [],
            "text": " ",
          },
          Object {
            "marks": Array [],
            "text": " ",
          },
          Object {
            "marks": Array [],
            "text": "r",
          },
          Object {
            "marks": Array [],
            "text": "e",
          },
          Object {
            "marks": Array [],
            "text": "t",
          },
          Object {
            "marks": Array [],
            "text": "u",
          },
          Object {
            "marks": Array [],
            "text": "r",
          },
          Object {
            "marks": Array [],
            "text": "n",
          },
          Object {
            "marks": Array [],
            "text": " ",
          },
          Object {
            "marks": Array [],
            "text": "h",
          },
          Object {
            "marks": Array [],
            "text": "e",
          },
          Object {
            "marks": Array [],
            "text": "l",
          },
          Object {
            "marks": Array [],
            "text": "l",
          },
          Object {
            "marks": Array [],
            "text": "o",
          },
          Object {
            "marks": Array [],
            "text": ";",
          },
          Object {
            "marks": Array [],
            "text": "
",
          },
          Object {
            "marks": Array [],
            "text": "}",
          },
        ],
        "key": "149",
      },
    ],
    "type": "code",
  },
]
`;

exports[`parses heading1 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "key": "4",
    "nodes": Array [
      Object {
        "characters": Array [
          Object {
            "marks": Array [],
            "text": "H",
          },
          Object {
            "marks": Array [],
            "text": "e",
          },
          Object {
            "marks": Array [],
            "text": "a",
          },
          Object {
            "marks": Array [],
            "text": "d",
          },
          Object {
            "marks": Array [],
            "text": "i",
          },
          Object {
            "marks": Array [],
            "text": "n",
          },
          Object {
            "marks": Array [],
            "text": "g",
          },
        ],
        "key": "3",
      },
    ],
    "type": "heading1",
  },
]
`;

exports[`parses heading2 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "key": "7",
    "nodes": Array [
      Object {
        "characters": Array [
          Object {
            "marks": Array [],
            "text": "H",
          },
          Object {
            "marks": Array [],
            "text": "e",
          },
          Object {
            "marks": Array [],
            "text": "a",
          },
          Object {
            "marks": Array [],
            "text": "d",
          },
          Object {
            "marks": Array [],
            "text": "i",
          },
          Object {
            "marks": Array [],
            "text": "n",
          },
          Object {
            "marks": Array [],
            "text": "g",
          },
        ],
        "key": "6",
      },
    ],
    "type": "heading2",
  },
]
`;

exports[`parses heading3 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "key": "10",
    "nodes": Array [
      Object {
        "characters": Array [
          Object {
            "marks": Array [],
            "text": "H",
          },
          Object {
            "marks": Array [],
            "text": "e",
          },
          Object {
            "marks": Array [],
            "text": "a",
          },
          Object {
            "marks": Array [],
            "text": "d",
          },
          Object {
            "marks": Array [],
            "text": "i",
          },
          Object {
            "marks": Array [],
            "text": "n",
          },
          Object {
            "marks": Array [],
            "text": "g",
          },
        ],
        "key": "9",
      },
    ],
    "type": "heading3",
  },
]
`;

exports[`parses heading4 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "key": "13",
    "nodes": Array [
      Object {
        "characters": Array [
          Object {
            "marks": Array [],
            "text": "H",
          },
          Object {
            "marks": Array [],
            "text": "e",
          },
          Object {
            "marks": Array [],
            "text": "a",
          },
          Object {
            "marks": Array [],
            "text": "d",
          },
          Object {
            "marks": Array [],
            "text": "i",
          },
          Object {
            "marks": Array [],
            "text": "n",
          },
          Object {
            "marks": Array [],
            "text": "g",
          },
        ],
        "key": "12",
      },
    ],
    "type": "heading4",
  },
]
`;

exports[`parses heading5 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "key": "16",
    "nodes": Array [
      Object {
        "characters": Array [
          Object {
            "marks": Array [],
            "text": "H",
          },
          Object {
            "marks": Array [],
            "text": "e",
          },
          Object {
            "marks": Array [],
            "text": "a",
          },
          Object {
            "marks": Array [],
            "text": "d",
          },
          Object {
            "marks": Array [],
            "text": "i",
          },
          Object {
            "marks": Array [],
            "text": "n",
          },
          Object {
            "marks": Array [],
            "text": "g",
          },
        ],
        "key": "15",
      },
    ],
    "type": "heading5",
  },
]
`;

exports[`parses heading6 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "key": "19",
    "nodes": Array [
      Object {
        "characters": Array [
          Object {
            "marks": Array [],
            "text": "H",
          },
          Object {
            "marks": Array [],
            "text": "e",
          },
          Object {
            "marks": Array [],
            "text": "a",
          },
          Object {
            "marks": Array [],
            "text": "d",
          },
          Object {
            "marks": Array [],
            "text": "i",
          },
          Object {
            "marks": Array [],
            "text": "n",
          },
          Object {
            "marks": Array [],
            "text": "g",
          },
        ],
        "key": "18",
      },
    ],
    "type": "heading6",
  },
]
`;

exports[`parses indented code blocks 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "key": "153",
    "nodes": Array [
      Object {
        "characters": Array [
          Object {
            "marks": Array [],
            "text": "c",
          },
          Object {
            "marks": Array [],
            "text": "o",
          },
          Object {
            "marks": Array [],
            "text": "n",
          },
          Object {
            "marks": Array [],
            "text": "s",
          },
          Object {
            "marks": Array [],
            "text": "t",
          },
          Object {
            "marks": Array [],
            "text": " ",
          },
          Object {
            "marks": Array [],
            "text": "h",
          },
          Object {
            "marks": Array [],
            "text": "e",
          },
          Object {
            "marks": Array [],
            "text": "l",
          },
          Object {
            "marks": Array [],
            "text": "l",
          },
          Object {
            "marks": Array [],
            "text": "o",
          },
          Object {
            "marks": Array [],
            "text": " ",
          },
          Object {
            "marks": Array [],
            "text": "=",
          },
          Object {
            "marks": Array [],
            "text": " ",
          },
          Object {
            "marks": Array [],
            "text": "'",
          },
          Object {
            "marks": Array [],
            "text": "w",
          },
          Object {
            "marks": Array [],
            "text": "o",
          },
          Object {
            "marks": Array [],
            "text": "r",
          },
          Object {
            "marks": Array [],
            "text": "l",
          },
          Object {
            "marks": Array [],
            "text": "d",
          },
          Object {
            "marks": Array [],
            "text": "'",
          },
          Object {
            "marks": Array [],
            "text": ";",
          },
          Object {
            "marks": Array [],
            "text": "
",
          },
          Object {
            "marks": Array [],
            "text": "f",
          },
          Object {
            "marks": Array [],
            "text": "u",
          },
          Object {
            "marks": Array [],
            "text": "n",
          },
          Object {
            "marks": Array [],
            "text": "c",
          },
          Object {
            "marks": Array [],
            "text": "t",
          },
          Object {
            "marks": Array [],
            "text": "i",
          },
          Object {
            "marks": Array [],
            "text": "o",
          },
          Object {
            "marks": Array [],
            "text": "n",
          },
          Object {
            "marks": Array [],
            "text": "(",
          },
          Object {
            "marks": Array [],
            "text": ")",
          },
          Object {
            "marks": Array [],
            "text": " ",
          },
          Object {
            "marks": Array [],
            "text": "{",
          },
          Object {
            "marks": Array [],
            "text": "
",
          },
          Object {
            "marks": Array [],
            "text": " ",
          },
          Object {
            "marks": Array [],
            "text": " ",
          },
          Object {
            "marks": Array [],
            "text": "r",
          },
          Object {
            "marks": Array [],
            "text": "e",
          },
          Object {
            "marks": Array [],
            "text": "t",
          },
          Object {
            "marks": Array [],
            "text": "u",
          },
          Object {
            "marks": Array [],
            "text": "r",
          },
          Object {
            "marks": Array [],
            "text": "n",
          },
          Object {
            "marks": Array [],
            "text": " ",
          },
          Object {
            "marks": Array [],
            "text": "h",
          },
          Object {
            "marks": Array [],
            "text": "e",
          },
          Object {
            "marks": Array [],
            "text": "l",
          },
          Object {
            "marks": Array [],
            "text": "l",
          },
          Object {
            "marks": Array [],
            "text": "o",
          },
          Object {
            "marks": Array [],
            "text": ";",
          },
          Object {
            "marks": Array [],
            "text": "
",
          },
          Object {
            "marks": Array [],
            "text": "}",
          },
        ],
        "key": "152",
      },
    ],
    "type": "code",
  },
]
`;

exports[`parses indented list items 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "key": "43",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "key": "40",
        "nodes": Array [
          Object {
            "characters": Array [
              Object {
                "marks": Array [],
                "text": "o",
              },
              Object {
                "marks": Array [],
                "text": "n",
              },
              Object {
                "marks": Array [],
                "text": "e",
              },
            ],
            "key": "39",
          },
        ],
        "type": "list-item",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "key": "42",
        "nodes": Array [
          Object {
            "characters": Array [
              Object {
                "marks": Array [],
                "text": "t",
              },
              Object {
                "marks": Array [],
                "text": "w",
              },
              Object {
                "marks": Array [],
                "text": "o",
              },
            ],
            "key": "41",
          },
        ],
        "type": "list-item",
      },
    ],
    "type": "bulleted-list",
  },
]
`;

exports[`parses interesting nesting 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "key": "172",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "key": "171",
        "nodes": Array [
          Object {
            "characters": Array [
              Object {
                "marks": Array [],
                "text": "L",
              },
              Object {
                "marks": Array [],
                "text": "i",
              },
              Object {
                "marks": Array [],
                "text": "s",
              },
              Object {
                "marks": Array [],
                "text": "t",
              },
              Object {
                "marks": Array [],
                "text": " ",
              },
              Object {
                "marks": Array [],
                "text": "i",
              },
              Object {
                "marks": Array [],
                "text": "t",
              },
              Object {
                "marks": Array [],
                "text": "e",
              },
              Object {
                "marks": Array [],
                "text": "m",
              },
              Object {
                "marks": Array [],
                "text": " ",
              },
              Object {
                "marks": Array [],
                "text": "t",
              },
              Object {
                "marks": Array [],
                "text": "h",
              },
              Object {
                "marks": Array [],
                "text": "a",
              },
              Object {
                "marks": Array [],
                "text": "t",
              },
              Object {
                "marks": Array [],
                "text": " ",
              },
              Object {
                "marks": Array [],
                "text": "c",
              },
              Object {
                "marks": Array [],
                "text": "o",
              },
              Object {
                "marks": Array [],
                "text": "n",
              },
              Object {
                "marks": Array [],
                "text": "t",
              },
              Object {
                "marks": Array [],
                "text": "a",
              },
              Object {
                "marks": Array [],
                "text": "i",
              },
              Object {
                "marks": Array [],
                "text": "n",
              },
              Object {
                "marks": Array [],
                "text": "s",
              },
              Object {
                "marks": Array [],
                "text": " ",
              },
              Object {
                "marks": Array [],
                "text": "a",
              },
              Object {
                "marks": Array [],
                "text": " ",
              },
              Object {
                "marks": Array [],
                "text": "b",
              },
              Object {
                "marks": Array [],
                "text": "l",
              },
              Object {
                "marks": Array [],
                "text": "o",
              },
              Object {
                "marks": Array [],
                "text": "c",
              },
              Object {
                "marks": Array [],
                "text": "k",
              },
              Object {
                "marks": Array [],
                "text": "q",
              },
              Object {
                "marks": Array [],
                "text": "u",
              },
              Object {
                "marks": Array [],
                "text": "o",
              },
              Object {
                "marks": Array [],
                "text": "t",
              },
              Object {
                "marks": Array [],
                "text": "e",
              },
              Object {
                "marks": Array [],
                "text": " ",
              },
              Object {
                "marks": Array [],
                "text": "w",
              },
              Object {
                "marks": Array [],
                "text": "i",
              },
              Object {
                "marks": Array [],
                "text": "t",
              },
              Object {
                "marks": Array [],
                "text": "h",
              },
              Object {
                "marks": Array [],
                "text": " ",
              },
              Object {
                "marks": Array [],
                "text": "i",
              },
              Object {
                "marks": Array [],
                "text": "n",
              },
              Object {
                "marks": Array [],
                "text": "l",
              },
              Object {
                "marks": Array [],
                "text": "i",
              },
              Object {
                "marks": Array [],
                "text": "n",
              },
              Object {
                "marks": Array [],
                "text": "e",
              },
              Object {
                "marks": Array [],
                "text": " ",
              },
              Object {
                "marks": Array [],
                "text": "m",
              },
              Object {
                "marks": Array [],
                "text": "a",
              },
              Object {
                "marks": Array [],
                "text": "r",
              },
              Object {
                "marks": Array [],
                "text": "k",
              },
            ],
            "key": "167",
          },
          Object {
            "data": Object {},
            "isVoid": false,
            "key": "170",
            "nodes": Array [
              Object {
                "characters": Array [
                  Object {
                    "marks": Array [],
                    "text": "B",
                  },
                  Object {
                    "marks": Array [],
                    "text": "l",
                  },
                  Object {
                    "marks": Array [],
                    "text": "o",
                  },
                  Object {
                    "marks": Array [],
                    "text": "c",
                  },
                  Object {
                    "marks": Array [],
                    "text": "k",
                  },
                  Object {
                    "marks": Array [],
                    "text": "q",
                  },
                  Object {
                    "marks": Array [],
                    "text": "u",
                  },
                  Object {
                    "marks": Array [],
                    "text": "o",
                  },
                  Object {
                    "marks": Array [],
                    "text": "t",
                  },
                  Object {
                    "marks": Array [],
                    "text": "e",
                  },
                  Object {
                    "marks": Array [],
                    "text": " ",
                  },
                  Object {
                    "marks": Array [],
                    "text": "w",
                  },
                  Object {
                    "marks": Array [],
                    "text": "i",
                  },
                  Object {
                    "marks": Array [],
                    "text": "t",
                  },
                  Object {
                    "marks": Array [],
                    "text": "h",
                  },
                  Object {
                    "marks": Array [],
                    "text": " ",
                  },
                  Object {
                    "marks": Array [],
                    "text": "c",
                  },
                  Object {
                    "marks": Array [],
                    "text": "o",
                  },
                  Object {
                    "marks": Array [],
                    "text": "d",
                  },
                  Object {
                    "marks": Array [],
                    "text": "e",
                  },
                  Object {
                    "marks": Array [],
                    "text": " ",
                  },
                  Object {
                    "marks": Array [
                      Object {
                        "data": Object {},
                        "type": "code",
                      },
                    ],
                    "text": "m",
                  },
                  Object {
                    "marks": Array [
                      Object {
                        "data": Object {},
                        "type": "code",
                      },
                    ],
                    "text": "a",
                  },
                  Object {
                    "marks": Array [
                      Object {
                        "data": Object {},
                        "type": "code",
                      },
                    ],
                    "text": "p",
                  },
                  Object {
                    "marks": Array [
                      Object {
                        "data": Object {},
                        "type": "code",
                      },
                    ],
                    "text": "S",
                  },
                  Object {
                    "marks": Array [
                      Object {
                        "data": Object {},
                        "type": "code",
                      },
                    ],
                    "text": "t",
                  },
                  Object {
                    "marks": Array [
                      Object {
                        "data": Object {},
                        "type": "code",
                      },
                    ],
                    "text": "a",
                  },
                  Object {
                    "marks": Array [
                      Object {
                        "data": Object {},
                        "type": "code",
                      },
                    ],
                    "text": "t",
                  },
                  Object {
                    "marks": Array [
                      Object {
                        "data": Object {},
                        "type": "code",
                      },
                    ],
                    "text": "e",
                  },
                  Object {
                    "marks": Array [
                      Object {
                        "data": Object {},
                        "type": "code",
                      },
                    ],
                    "text": "T",
                  },
                  Object {
                    "marks": Array [
                      Object {
                        "data": Object {},
                        "type": "code",
                      },
                    ],
                    "text": "o",
                  },
                  Object {
                    "marks": Array [
                      Object {
                        "data": Object {},
                        "type": "code",
                      },
                    ],
                    "text": "P",
                  },
                  Object {
                    "marks": Array [
                      Object {
                        "data": Object {},
                        "type": "code",
                      },
                    ],
                    "text": "r",
                  },
                  Object {
                    "marks": Array [
                      Object {
                        "data": Object {},
                        "type": "code",
                      },
                    ],
                    "text": "o",
                  },
                  Object {
                    "marks": Array [
                      Object {
                        "data": Object {},
                        "type": "code",
                      },
                    ],
                    "text": "p",
                  },
                  Object {
                    "marks": Array [
                      Object {
                        "data": Object {},
                        "type": "code",
                      },
                    ],
                    "text": "s",
                  },
                  Object {
                    "marks": Array [
                      Object {
                        "data": Object {},
                        "type": "code",
                      },
                    ],
                    "text": "(",
                  },
                  Object {
                    "marks": Array [
                      Object {
                        "data": Object {},
                        "type": "code",
                      },
                    ],
                    "text": ")",
                  },
                ],
                "key": "169",
              },
            ],
            "type": "block-quote",
          },
        ],
        "type": "list-item",
      },
    ],
    "type": "bulleted-list",
  },
]
`;

exports[`parses link 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "key": "157",
    "nodes": Array [
      Object {
        "characters": Array [],
        "key": "159",
      },
      Object {
        "data": Object {
          "href": "http://google.com",
        },
        "isVoid": false,
        "key": "156",
        "nodes": Array [
          Object {
            "characters": Array [
              Object {
                "marks": Array [],
                "text": "g",
              },
              Object {
                "marks": Array [],
                "text": "o",
              },
              Object {
                "marks": Array [],
                "text": "o",
              },
              Object {
                "marks": Array [],
                "text": "g",
              },
              Object {
                "marks": Array [],
                "text": "l",
              },
              Object {
                "marks": Array [],
                "text": "e",
              },
            ],
            "key": "155",
          },
        ],
        "type": "link",
      },
      Object {
        "characters": Array [],
        "key": "160",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`parses link within mark 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "key": "163",
    "nodes": Array [
      Object {
        "characters": Array [],
        "key": "165",
      },
      Object {
        "data": Object {
          "href": "http://google.com",
        },
        "isVoid": false,
        "key": "162",
        "nodes": Array [
          Object {
            "characters": Array [
              Object {
                "marks": Array [],
                "text": "g",
              },
              Object {
                "marks": Array [],
                "text": "o",
              },
              Object {
                "marks": Array [],
                "text": "o",
              },
              Object {
                "marks": Array [],
                "text": "g",
              },
              Object {
                "marks": Array [],
                "text": "l",
              },
              Object {
                "marks": Array [],
                "text": "e",
              },
            ],
            "key": "161",
          },
        ],
        "type": "link",
      },
      Object {
        "characters": Array [],
        "key": "166",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`parses list items 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "key": "31",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "key": "28",
        "nodes": Array [
          Object {
            "characters": Array [
              Object {
                "marks": Array [],
                "text": "o",
              },
              Object {
                "marks": Array [],
                "text": "n",
              },
              Object {
                "marks": Array [],
                "text": "e",
              },
            ],
            "key": "27",
          },
        ],
        "type": "list-item",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "key": "30",
        "nodes": Array [
          Object {
            "characters": Array [
              Object {
                "marks": Array [],
                "text": "t",
              },
              Object {
                "marks": Array [],
                "text": "w",
              },
              Object {
                "marks": Array [],
                "text": "o",
              },
            ],
            "key": "29",
          },
        ],
        "type": "list-item",
      },
    ],
    "type": "bulleted-list",
  },
]
`;

exports[`parses list items with marks 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "key": "50",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "key": "47",
        "nodes": Array [
          Object {
            "characters": Array [
              Object {
                "marks": Array [],
                "text": "o",
              },
              Object {
                "marks": Array [],
                "text": "n",
              },
              Object {
                "marks": Array [],
                "text": "e",
              },
              Object {
                "marks": Array [],
                "text": " ",
              },
              Object {
                "marks": Array [
                  Object {
                    "data": Object {},
                    "type": "bold",
                  },
                ],
                "text": "b",
              },
              Object {
                "marks": Array [
                  Object {
                    "data": Object {},
                    "type": "bold",
                  },
                ],
                "text": "o",
              },
              Object {
                "marks": Array [
                  Object {
                    "data": Object {},
                    "type": "bold",
                  },
                ],
                "text": "l",
              },
              Object {
                "marks": Array [
                  Object {
                    "data": Object {},
                    "type": "bold",
                  },
                ],
                "text": "d",
              },
            ],
            "key": "45",
          },
        ],
        "type": "list-item",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "key": "49",
        "nodes": Array [
          Object {
            "characters": Array [
              Object {
                "marks": Array [
                  Object {
                    "data": Object {},
                    "type": "italic",
                  },
                ],
                "text": "i",
              },
              Object {
                "marks": Array [
                  Object {
                    "data": Object {},
                    "type": "italic",
                  },
                ],
                "text": "t",
              },
              Object {
                "marks": Array [
                  Object {
                    "data": Object {},
                    "type": "italic",
                  },
                ],
                "text": "a",
              },
              Object {
                "marks": Array [
                  Object {
                    "data": Object {},
                    "type": "italic",
                  },
                ],
                "text": "l",
              },
              Object {
                "marks": Array [
                  Object {
                    "data": Object {},
                    "type": "italic",
                  },
                ],
                "text": "i",
              },
              Object {
                "marks": Array [
                  Object {
                    "data": Object {},
                    "type": "italic",
                  },
                ],
                "text": "c",
              },
              Object {
                "marks": Array [],
                "text": " ",
              },
              Object {
                "marks": Array [],
                "text": "t",
              },
              Object {
                "marks": Array [],
                "text": "w",
              },
              Object {
                "marks": Array [],
                "text": "o",
              },
            ],
            "key": "48",
          },
        ],
        "type": "list-item",
      },
    ],
    "type": "bulleted-list",
  },
]
`;

exports[`parses list with trailing item 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "key": "37",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "key": "34",
        "nodes": Array [
          Object {
            "characters": Array [
              Object {
                "marks": Array [],
                "text": "o",
              },
              Object {
                "marks": Array [],
                "text": "n",
              },
              Object {
                "marks": Array [],
                "text": "e",
              },
            ],
            "key": "33",
          },
        ],
        "type": "list-item",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "key": "36",
        "nodes": Array [
          Object {
            "characters": Array [
              Object {
                "marks": Array [],
                "text": "t",
              },
              Object {
                "marks": Array [],
                "text": "w",
              },
              Object {
                "marks": Array [],
                "text": "o",
              },
              Object {
                "marks": Array [],
                "text": "
",
              },
              Object {
                "marks": Array [],
                "text": "-",
              },
            ],
            "key": "35",
          },
        ],
        "type": "list-item",
      },
    ],
    "type": "bulleted-list",
  },
]
`;

exports[`parses ordered list items 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "key": "56",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "key": "53",
        "nodes": Array [
          Object {
            "characters": Array [
              Object {
                "marks": Array [],
                "text": "o",
              },
              Object {
                "marks": Array [],
                "text": "n",
              },
              Object {
                "marks": Array [],
                "text": "e",
              },
            ],
            "key": "52",
          },
        ],
        "type": "list-item",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "key": "55",
        "nodes": Array [
          Object {
            "characters": Array [
              Object {
                "marks": Array [],
                "text": "t",
              },
              Object {
                "marks": Array [],
                "text": "w",
              },
              Object {
                "marks": Array [],
                "text": "o",
              },
            ],
            "key": "54",
          },
        ],
        "type": "list-item",
      },
    ],
    "type": "ordered-list",
  },
]
`;

exports[`parses ordered list items with different numbers 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "key": "71",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "key": "66",
        "nodes": Array [
          Object {
            "characters": Array [
              Object {
                "marks": Array [],
                "text": "o",
              },
              Object {
                "marks": Array [],
                "text": "n",
              },
              Object {
                "marks": Array [],
                "text": "e",
              },
            ],
            "key": "65",
          },
        ],
        "type": "list-item",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "key": "68",
        "nodes": Array [
          Object {
            "characters": Array [
              Object {
                "marks": Array [],
                "text": "t",
              },
              Object {
                "marks": Array [],
                "text": "w",
              },
              Object {
                "marks": Array [],
                "text": "o",
              },
            ],
            "key": "67",
          },
        ],
        "type": "list-item",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "key": "70",
        "nodes": Array [
          Object {
            "characters": Array [
              Object {
                "marks": Array [],
                "text": "t",
              },
              Object {
                "marks": Array [],
                "text": "h",
              },
              Object {
                "marks": Array [],
                "text": "r",
              },
              Object {
                "marks": Array [],
                "text": "e",
              },
              Object {
                "marks": Array [],
                "text": "e",
              },
            ],
            "key": "69",
          },
        ],
        "type": "list-item",
      },
    ],
    "type": "ordered-list",
  },
]
`;

exports[`parses ordered list items with marks 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "key": "63",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "key": "60",
        "nodes": Array [
          Object {
            "characters": Array [
              Object {
                "marks": Array [],
                "text": "o",
              },
              Object {
                "marks": Array [],
                "text": "n",
              },
              Object {
                "marks": Array [],
                "text": "e",
              },
              Object {
                "marks": Array [],
                "text": " ",
              },
              Object {
                "marks": Array [
                  Object {
                    "data": Object {},
                    "type": "bold",
                  },
                ],
                "text": "b",
              },
              Object {
                "marks": Array [
                  Object {
                    "data": Object {},
                    "type": "bold",
                  },
                ],
                "text": "o",
              },
              Object {
                "marks": Array [
                  Object {
                    "data": Object {},
                    "type": "bold",
                  },
                ],
                "text": "l",
              },
              Object {
                "marks": Array [
                  Object {
                    "data": Object {},
                    "type": "bold",
                  },
                ],
                "text": "d",
              },
            ],
            "key": "58",
          },
        ],
        "type": "list-item",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "key": "62",
        "nodes": Array [
          Object {
            "characters": Array [
              Object {
                "marks": Array [
                  Object {
                    "data": Object {},
                    "type": "italic",
                  },
                ],
                "text": "i",
              },
              Object {
                "marks": Array [
                  Object {
                    "data": Object {},
                    "type": "italic",
                  },
                ],
                "text": "t",
              },
              Object {
                "marks": Array [
                  Object {
                    "data": Object {},
                    "type": "italic",
                  },
                ],
                "text": "a",
              },
              Object {
                "marks": Array [
                  Object {
                    "data": Object {},
                    "type": "italic",
                  },
                ],
                "text": "l",
              },
              Object {
                "marks": Array [
                  Object {
                    "data": Object {},
                    "type": "italic",
                  },
                ],
                "text": "i",
              },
              Object {
                "marks": Array [
                  Object {
                    "data": Object {},
                    "type": "italic",
                  },
                ],
                "text": "c",
              },
              Object {
                "marks": Array [],
                "text": " ",
              },
              Object {
                "marks": Array [],
                "text": "t",
              },
              Object {
                "marks": Array [],
                "text": "w",
              },
              Object {
                "marks": Array [],
                "text": "o",
              },
            ],
            "key": "61",
          },
        ],
        "type": "list-item",
      },
    ],
    "type": "ordered-list",
  },
]
`;

exports[`parses paragraph 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "key": "1",
    "nodes": Array [
      Object {
        "characters": Array [
          Object {
            "marks": Array [],
            "text": "T",
          },
          Object {
            "marks": Array [],
            "text": "h",
          },
          Object {
            "marks": Array [],
            "text": "i",
          },
          Object {
            "marks": Array [],
            "text": "s",
          },
          Object {
            "marks": Array [],
            "text": " ",
          },
          Object {
            "marks": Array [],
            "text": "i",
          },
          Object {
            "marks": Array [],
            "text": "s",
          },
          Object {
            "marks": Array [],
            "text": " ",
          },
          Object {
            "marks": Array [],
            "text": "j",
          },
          Object {
            "marks": Array [],
            "text": "u",
          },
          Object {
            "marks": Array [],
            "text": "s",
          },
          Object {
            "marks": Array [],
            "text": "t",
          },
          Object {
            "marks": Array [],
            "text": " ",
          },
          Object {
            "marks": Array [],
            "text": "a",
          },
          Object {
            "marks": Array [],
            "text": " ",
          },
          Object {
            "marks": Array [],
            "text": "s",
          },
          Object {
            "marks": Array [],
            "text": "e",
          },
          Object {
            "marks": Array [],
            "text": "n",
          },
          Object {
            "marks": Array [],
            "text": "t",
          },
          Object {
            "marks": Array [],
            "text": "a",
          },
          Object {
            "marks": Array [],
            "text": "n",
          },
          Object {
            "marks": Array [],
            "text": "c",
          },
          Object {
            "marks": Array [],
            "text": "e",
          },
        ],
        "key": "0",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`parses quote 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "key": "22",
    "nodes": Array [
      Object {
        "characters": Array [
          Object {
            "marks": Array [],
            "text": "t",
          },
          Object {
            "marks": Array [],
            "text": "h",
          },
          Object {
            "marks": Array [],
            "text": "i",
          },
          Object {
            "marks": Array [],
            "text": "s",
          },
          Object {
            "marks": Array [],
            "text": " ",
          },
          Object {
            "marks": Array [],
            "text": "i",
          },
          Object {
            "marks": Array [],
            "text": "s",
          },
          Object {
            "marks": Array [],
            "text": " ",
          },
          Object {
            "marks": Array [],
            "text": "a",
          },
          Object {
            "marks": Array [],
            "text": " ",
          },
          Object {
            "marks": Array [],
            "text": "q",
          },
          Object {
            "marks": Array [],
            "text": "u",
          },
          Object {
            "marks": Array [],
            "text": "o",
          },
          Object {
            "marks": Array [],
            "text": "t",
          },
          Object {
            "marks": Array [],
            "text": "e",
          },
        ],
        "key": "21",
      },
    ],
    "type": "block-quote",
  },
]
`;

exports[`parses quote with marks 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "key": "25",
    "nodes": Array [
      Object {
        "characters": Array [
          Object {
            "marks": Array [
              Object {
                "data": Object {},
                "type": "bold",
              },
            ],
            "text": "b",
          },
          Object {
            "marks": Array [
              Object {
                "data": Object {},
                "type": "bold",
              },
            ],
            "text": "o",
          },
          Object {
            "marks": Array [
              Object {
                "data": Object {},
                "type": "bold",
              },
            ],
            "text": "l",
          },
          Object {
            "marks": Array [
              Object {
                "data": Object {},
                "type": "bold",
              },
            ],
            "text": "d",
          },
          Object {
            "marks": Array [],
            "text": " ",
          },
          Object {
            "marks": Array [],
            "text": "i",
          },
          Object {
            "marks": Array [],
            "text": "n",
          },
          Object {
            "marks": Array [],
            "text": " ",
          },
          Object {
            "marks": Array [],
            "text": "a",
          },
          Object {
            "marks": Array [],
            "text": " ",
          },
          Object {
            "marks": Array [],
            "text": "q",
          },
          Object {
            "marks": Array [],
            "text": "u",
          },
          Object {
            "marks": Array [],
            "text": "o",
          },
          Object {
            "marks": Array [],
            "text": "t",
          },
          Object {
            "marks": Array [],
            "text": "e",
          },
        ],
        "key": "24",
      },
    ],
    "type": "block-quote",
  },
]
`;

exports[`parses tables 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "key": "131",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "key": "109",
        "nodes": Array [
          Object {
            "data": Object {
              "align": null,
            },
            "isVoid": false,
            "key": "104",
            "nodes": Array [
              Object {
                "characters": Array [
                  Object {
                    "marks": Array [],
                    "text": "T",
                  },
                  Object {
                    "marks": Array [],
                    "text": "a",
                  },
                  Object {
                    "marks": Array [],
                    "text": "b",
                  },
                  Object {
                    "marks": Array [],
                    "text": "l",
                  },
                  Object {
                    "marks": Array [],
                    "text": "e",
                  },
                  Object {
                    "marks": Array [],
                    "text": "s",
                  },
                ],
                "key": "103",
              },
            ],
            "type": "table-head",
          },
          Object {
            "data": Object {
              "align": "center",
            },
            "isVoid": false,
            "key": "106",
            "nodes": Array [
              Object {
                "characters": Array [
                  Object {
                    "marks": Array [],
                    "text": "A",
                  },
                  Object {
                    "marks": Array [],
                    "text": "r",
                  },
                  Object {
                    "marks": Array [],
                    "text": "e",
                  },
                ],
                "key": "105",
              },
            ],
            "type": "table-head",
          },
          Object {
            "data": Object {
              "align": "right",
            },
            "isVoid": false,
            "key": "108",
            "nodes": Array [
              Object {
                "characters": Array [
                  Object {
                    "marks": Array [],
                    "text": "C",
                  },
                  Object {
                    "marks": Array [],
                    "text": "o",
                  },
                  Object {
                    "marks": Array [],
                    "text": "o",
                  },
                  Object {
                    "marks": Array [],
                    "text": "l",
                  },
                ],
                "key": "107",
              },
            ],
            "type": "table-head",
          },
        ],
        "type": "table-row",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "key": "116",
        "nodes": Array [
          Object {
            "data": Object {
              "align": null,
            },
            "isVoid": false,
            "key": "111",
            "nodes": Array [
              Object {
                "characters": Array [
                  Object {
                    "marks": Array [],
                    "text": "c",
                  },
                  Object {
                    "marks": Array [],
                    "text": "o",
                  },
                  Object {
                    "marks": Array [],
                    "text": "l",
                  },
                  Object {
                    "marks": Array [],
                    "text": " ",
                  },
                  Object {
                    "marks": Array [],
                    "text": "1",
                  },
                  Object {
                    "marks": Array [],
                    "text": " ",
                  },
                  Object {
                    "marks": Array [],
                    "text": "i",
                  },
                  Object {
                    "marks": Array [],
                    "text": "s",
                  },
                ],
                "key": "110",
              },
            ],
            "type": "table-cell",
          },
          Object {
            "data": Object {
              "align": "center",
            },
            "isVoid": false,
            "key": "113",
            "nodes": Array [
              Object {
                "characters": Array [
                  Object {
                    "marks": Array [],
                    "text": "l",
                  },
                  Object {
                    "marks": Array [],
                    "text": "e",
                  },
                  Object {
                    "marks": Array [],
                    "text": "f",
                  },
                  Object {
                    "marks": Array [],
                    "text": "t",
                  },
                  Object {
                    "marks": Array [],
                    "text": "-",
                  },
                  Object {
                    "marks": Array [],
                    "text": "a",
                  },
                  Object {
                    "marks": Array [],
                    "text": "l",
                  },
                  Object {
                    "marks": Array [],
                    "text": "i",
                  },
                  Object {
                    "marks": Array [],
                    "text": "g",
                  },
                  Object {
                    "marks": Array [],
                    "text": "n",
                  },
                  Object {
                    "marks": Array [],
                    "text": "e",
                  },
                  Object {
                    "marks": Array [],
                    "text": "d",
                  },
                ],
                "key": "112",
              },
            ],
            "type": "table-cell",
          },
          Object {
            "data": Object {
              "align": "right",
            },
            "isVoid": false,
            "key": "115",
            "nodes": Array [
              Object {
                "characters": Array [
                  Object {
                    "marks": Array [],
                    "text": "$",
                  },
                  Object {
                    "marks": Array [],
                    "text": "1",
                  },
                  Object {
                    "marks": Array [],
                    "text": "6",
                  },
                  Object {
                    "marks": Array [],
                    "text": "0",
                  },
                  Object {
                    "marks": Array [],
                    "text": "0",
                  },
                ],
                "key": "114",
              },
            ],
            "type": "table-cell",
          },
        ],
        "type": "table-row",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "key": "123",
        "nodes": Array [
          Object {
            "data": Object {
              "align": null,
            },
            "isVoid": false,
            "key": "118",
            "nodes": Array [
              Object {
                "characters": Array [
                  Object {
                    "marks": Array [],
                    "text": "c",
                  },
                  Object {
                    "marks": Array [],
                    "text": "o",
                  },
                  Object {
                    "marks": Array [],
                    "text": "l",
                  },
                  Object {
                    "marks": Array [],
                    "text": " ",
                  },
                  Object {
                    "marks": Array [],
                    "text": "2",
                  },
                  Object {
                    "marks": Array [],
                    "text": " ",
                  },
                  Object {
                    "marks": Array [],
                    "text": "i",
                  },
                  Object {
                    "marks": Array [],
                    "text": "s",
                  },
                ],
                "key": "117",
              },
            ],
            "type": "table-cell",
          },
          Object {
            "data": Object {
              "align": "center",
            },
            "isVoid": false,
            "key": "120",
            "nodes": Array [
              Object {
                "characters": Array [
                  Object {
                    "marks": Array [],
                    "text": "c",
                  },
                  Object {
                    "marks": Array [],
                    "text": "e",
                  },
                  Object {
                    "marks": Array [],
                    "text": "n",
                  },
                  Object {
                    "marks": Array [],
                    "text": "t",
                  },
                  Object {
                    "marks": Array [],
                    "text": "e",
                  },
                  Object {
                    "marks": Array [],
                    "text": "r",
                  },
                  Object {
                    "marks": Array [],
                    "text": "e",
                  },
                  Object {
                    "marks": Array [],
                    "text": "d",
                  },
                ],
                "key": "119",
              },
            ],
            "type": "table-cell",
          },
          Object {
            "data": Object {
              "align": "right",
            },
            "isVoid": false,
            "key": "122",
            "nodes": Array [
              Object {
                "characters": Array [
                  Object {
                    "marks": Array [],
                    "text": "$",
                  },
                  Object {
                    "marks": Array [],
                    "text": "1",
                  },
                  Object {
                    "marks": Array [],
                    "text": "2",
                  },
                ],
                "key": "121",
              },
            ],
            "type": "table-cell",
          },
        ],
        "type": "table-row",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "key": "130",
        "nodes": Array [
          Object {
            "data": Object {
              "align": null,
            },
            "isVoid": false,
            "key": "125",
            "nodes": Array [
              Object {
                "characters": Array [
                  Object {
                    "marks": Array [],
                    "text": "c",
                  },
                  Object {
                    "marks": Array [],
                    "text": "o",
                  },
                  Object {
                    "marks": Array [],
                    "text": "l",
                  },
                  Object {
                    "marks": Array [],
                    "text": " ",
                  },
                  Object {
                    "marks": Array [],
                    "text": "3",
                  },
                  Object {
                    "marks": Array [],
                    "text": " ",
                  },
                  Object {
                    "marks": Array [],
                    "text": "i",
                  },
                  Object {
                    "marks": Array [],
                    "text": "s",
                  },
                ],
                "key": "124",
              },
            ],
            "type": "table-cell",
          },
          Object {
            "data": Object {
              "align": "center",
            },
            "isVoid": false,
            "key": "127",
            "nodes": Array [
              Object {
                "characters": Array [
                  Object {
                    "marks": Array [],
                    "text": "r",
                  },
                  Object {
                    "marks": Array [],
                    "text": "i",
                  },
                  Object {
                    "marks": Array [],
                    "text": "g",
                  },
                  Object {
                    "marks": Array [],
                    "text": "h",
                  },
                  Object {
                    "marks": Array [],
                    "text": "t",
                  },
                  Object {
                    "marks": Array [],
                    "text": "-",
                  },
                  Object {
                    "marks": Array [],
                    "text": "a",
                  },
                  Object {
                    "marks": Array [],
                    "text": "l",
                  },
                  Object {
                    "marks": Array [],
                    "text": "i",
                  },
                  Object {
                    "marks": Array [],
                    "text": "g",
                  },
                  Object {
                    "marks": Array [],
                    "text": "n",
                  },
                  Object {
                    "marks": Array [],
                    "text": "e",
                  },
                  Object {
                    "marks": Array [],
                    "text": "d",
                  },
                ],
                "key": "126",
              },
            ],
            "type": "table-cell",
          },
          Object {
            "data": Object {
              "align": "right",
            },
            "isVoid": false,
            "key": "129",
            "nodes": Array [
              Object {
                "characters": Array [
                  Object {
                    "marks": Array [],
                    "text": "$",
                  },
                  Object {
                    "marks": Array [],
                    "text": "1",
                  },
                ],
                "key": "128",
              },
            ],
            "type": "table-cell",
          },
        ],
        "type": "table-row",
      },
    ],
    "type": "table",
  },
]
`;

exports[`parses todo list items 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "key": "137",
    "nodes": Array [
      Object {
        "data": Object {
          "checked": false,
        },
        "isVoid": false,
        "key": "134",
        "nodes": Array [
          Object {
            "characters": Array [
              Object {
                "marks": Array [],
                "text": "t",
              },
              Object {
                "marks": Array [],
                "text": "o",
              },
              Object {
                "marks": Array [],
                "text": "d",
              },
              Object {
                "marks": Array [],
                "text": "o",
              },
            ],
            "key": "133",
          },
        ],
        "type": "list-item",
      },
      Object {
        "data": Object {
          "checked": true,
        },
        "isVoid": false,
        "key": "136",
        "nodes": Array [
          Object {
            "characters": Array [
              Object {
                "marks": Array [],
                "text": "d",
              },
              Object {
                "marks": Array [],
                "text": "o",
              },
              Object {
                "marks": Array [],
                "text": "n",
              },
              Object {
                "marks": Array [],
                "text": "e",
              },
            ],
            "key": "135",
          },
        ],
        "type": "list-item",
      },
    ],
    "type": "todo-list",
  },
]
`;

exports[`parses todo list items with marks 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "key": "144",
    "nodes": Array [
      Object {
        "data": Object {
          "checked": true,
        },
        "isVoid": false,
        "key": "140",
        "nodes": Array [
          Object {
            "characters": Array [
              Object {
                "marks": Array [
                  Object {
                    "data": Object {},
                    "type": "deleted",
                  },
                ],
                "text": "d",
              },
              Object {
                "marks": Array [
                  Object {
                    "data": Object {},
                    "type": "deleted",
                  },
                ],
                "text": "o",
              },
              Object {
                "marks": Array [
                  Object {
                    "data": Object {},
                    "type": "deleted",
                  },
                ],
                "text": "n",
              },
              Object {
                "marks": Array [
                  Object {
                    "data": Object {},
                    "type": "deleted",
                  },
                ],
                "text": "e",
              },
            ],
            "key": "139",
          },
        ],
        "type": "list-item",
      },
      Object {
        "data": Object {
          "checked": true,
        },
        "isVoid": false,
        "key": "143",
        "nodes": Array [
          Object {
            "characters": Array [
              Object {
                "marks": Array [],
                "text": "m",
              },
              Object {
                "marks": Array [],
                "text": "o",
              },
              Object {
                "marks": Array [],
                "text": "r",
              },
              Object {
                "marks": Array [],
                "text": "e",
              },
              Object {
                "marks": Array [],
                "text": " ",
              },
              Object {
                "marks": Array [
                  Object {
                    "data": Object {},
                    "type": "bold",
                  },
                ],
                "text": "d",
              },
              Object {
                "marks": Array [
                  Object {
                    "data": Object {},
                    "type": "bold",
                  },
                ],
                "text": "o",
              },
              Object {
                "marks": Array [
                  Object {
                    "data": Object {},
                    "type": "bold",
                  },
                ],
                "text": "n",
              },
              Object {
                "marks": Array [
                  Object {
                    "data": Object {},
                    "type": "bold",
                  },
                ],
                "text": "e",
              },
            ],
            "key": "141",
          },
        ],
        "type": "list-item",
      },
    ],
    "type": "todo-list",
  },
]
`;
